--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <developerConnection>scm:git:ssh://git@github.com/sbouclier/kraken-java-api-client.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
+    <ciManagement>
+        <url>https://travis-ci.org/sbouclier/kraken-java-api-client/</url>
+        <system>Travis</system>
+    </ciManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,6 +70,36 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <!-- Code coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.3.0</version>
+                <configuration>
+                    <timestampFormat>${maven.build.timestamp.format}</timestampFormat>
                 </configuration>
             </plugin>
         </plugins>
